# microKanren

./: .gitignore  quickcheck-test-framework.cabal
app/: Main.hs
src/: Lib.hs
