name:                microKanren
version:             0.1.0.0
synopsis:            A simple implementation of the microKanren relational programming language
description:         Please see README.md
homepage:            http://github.com/ChrisCoffey/microKanren#readme
license:             MIT
license-file:        LICENSE
author:              ChrisCoffey
maintainer:          Christopher.m.Coffey@gmail.com
copyright:           2016 Chris Coffey
category:            Library
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable microKanren-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , microKanren
  default-language:    Haskell2010

test-suite quickcheck-test-framework-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , microKanren
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisCoffey/microKanren
